第二周作业（GC相关）